test fix on safari

--- a/public/css/oprec/oprec-form.css
+++ b/public/css/oprec/oprec-form.css
@@ -30,10 +30,10 @@ body{
 }
 
 input, input::before, input::after, textarea, select, option{
-     -webkit-user-select: initial;
-     -khtml-user-select: initial;
-     -moz-user-select: initial;
-     -ms-user-select: initial;
-     user-select: initial;
+     -webkit-user-select: text;
+     -khtml-user-select: text;
+     -moz-user-select: text;
+     -ms-user-select: text;
+     user-select: text;
 }
 
